test: 调试数据库连接

--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     },
     "dependencies": {
         "@playwright/test": "^1.14.0",
+        "@types/faker": "^5.5.8",
+        "@types/mysql": "^2.15.19",
         "@types/node": "^16.6.2",
         "@types/shelljs": "^0.8.9",
         "faker": "^5.5.3",
         "module-alias": "^2.2.2",
+        "mysql": "^2.18.1",
         "playwright": "^1.14.0",
         "shelljs": "^0.8.4"
     },
