--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,12 +48,12 @@
     "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
     "paths": {
         "@*": ["./*"],
-        "@choerodon/*": ["choerodon/*"],
+        "@combo/*": ["combo/*"],
+        "@entries/*": ["entries/*"],
+        "@htms/*": ["htms/*"],
         "@pages/*": ["pages/*"],
         "@tests/*": ["tests/*"],
         "@utils/*": ["utils/*"],
-        "@htms/*": ["htms/*"],
-        "@demo/*": ["demo/*"],
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
